# aicurator

./: .gitignore  azure-pipelines.yml  readme.md
integrationtest_python/: README.md  behave.ini  pyproject.toml  requirements.txt
integrationtest_python/aicurator/: README.md  __init__.py  pyproject.toml  step_healer.py
integrationtest_python/aicurator/src/aicurator/: __init__.py
integrationtest_python/self-healing-integration-tests/: README.md  pyproject.toml
integrationtest_python/self-healing-integration-tests/features/: environment.py  registration.feature  reservation-api.feature
integrationtest_python/self-healing-integration-tests/features/steps/: login_steps.py  registration_steps.py  reservation_api_steps.py  reservation_steps.py  self_healing_steps.py
integrationtest_python/self-healing-integration-tests/taxishare/: __init__.py  api.py  browser.py  data.py  http.py  store.py  ui.py
integrationtest_python/self-healing-integration-tests/taxishare/pages/: __init__.py  login.py  registration.py  reservation.py
integrationtest_python/self_healing_integration_tests/features/: environment.py  reservation.feature
integrationtest_python/self_healing_integration_tests/features/pages/: base_page.py  login_page.py  registration_page.py  reservation_page.py
integrationtest_python/self_healing_integration_tests/features/steps/: common_steps.py  login_api_steps.py  login_steps.py  registration_api_steps.py  registration_steps.py  reservation_api_steps.py  reservation_steps.py
integrationtest_python/self_healing_integration_tests/features/support/: api_client.py  browser.py  data_factory.py  page_factory.py  scenario_store.py  self_healing.py
integrationtest_python/src/aicurator/: README.md
integrationtest_python/src/aicurator/behave/: step_prompt_creator.py
integrationtest_python/src/aicurator/config/: files_util.py  prompt_client.py
integrationtest_python/src/aicurator/selenium/: auto_healer.py  locator_prompt_creator.py
integrationtest_python/src/self_healing_integration_test/: README.md
integrationtest_python/src/self_healing_integration_test/config/: api.py  browser.py  config.py  store.py
integrationtest_python/src/self_healing_integration_test/features/: environment.py  (+1 more)
(+121 files in other folders)
