[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "self-healing-integration-tests-python"
version = "0.1.0"
description = "Behave-based integration test suite showcasing AiCurator's self-healing hooks."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "AiCurator Team"}
]
dependencies = [
  "behave>=1.2.6",
  "selenium>=4.20.0",
  "requests>=2.31.0",
  "Faker>=25.0"
]

[tool.setuptools]
packages = ["taxishare"]

[tool.setuptools.package-dir]
taxishare = "taxishare"
